--- a/css/main.css
+++ b/css/main.css
@@ -625,7 +625,7 @@ pre code {
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .footer__section__article__texto__p, .footer__section__article__texto__ol, .col-11, .col-12, .footer__section__article__h2, .sectionM__article2__title__h2, .sectionM__article__title__h2, .sectionB__article2__title__h2, .sectionB__article__title__h2, .col,
-.col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .footer__section__article__div__div, .sectionM__article__div__div, .sectionB__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta, .col-sm,
+.col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .sectionB__article__div__div, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .footer__section__article__div__div, .sectionM__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta, .col-sm,
 .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
@@ -899,7 +899,7 @@ pre code {
     flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
-  .col-sm-6 {
+  .col-sm-6, .sectionB__article__div__div {
     flex: 0 0 50%;
     max-width: 50%;
   }
@@ -923,7 +923,7 @@ pre code {
     flex: 0 0 91.66667%;
     max-width: 91.66667%;
   }
-  .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .footer__section__article__div__div, .sectionM__article__div__div, .sectionB__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta {
+  .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .footer__section__article__div__div, .sectionM__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta {
     flex: 0 0 100%;
     max-width: 100%;
   }
@@ -1233,7 +1233,7 @@ pre code {
     flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
-  .col-lg-6, .footer__section__article__div__div, .sectionM__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta {
+  .col-lg-6, .footer__section__article__div__div, .sectionM__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n {
     flex: 0 0 50%;
     max-width: 50%;
   }
@@ -1257,7 +1257,7 @@ pre code {
     flex: 0 0 91.66667%;
     max-width: 91.66667%;
   }
-  .col-lg-12 {
+  .col-lg-12, .sectionC__article, .sectionC__consulta {
     flex: 0 0 100%;
     max-width: 100%;
   }
@@ -1400,7 +1400,7 @@ pre code {
     flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
-  .col-xl-6 {
+  .col-xl-6, .sectionC__article, .sectionC__consulta {
     flex: 0 0 50%;
     max-width: 50%;
   }
@@ -10280,7 +10280,7 @@ html {
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .footer__section__article__texto__p, .footer__section__article__texto__ol, .col-11, .col-12, .footer__section__article__h2, .sectionM__article2__title__h2, .sectionM__article__title__h2, .sectionB__article2__title__h2, .sectionB__article__title__h2, .col,
-.col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .footer__section__article__div__div, .sectionM__article__div__div, .sectionB__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta, .col-sm,
+.col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .sectionB__article__div__div, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .footer__section__article__div__div, .sectionM__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta, .col-sm,
 .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
@@ -10554,7 +10554,7 @@ html {
     flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
-  .col-sm-6 {
+  .col-sm-6, .sectionB__article__div__div {
     flex: 0 0 50%;
     max-width: 50%;
   }
@@ -10578,7 +10578,7 @@ html {
     flex: 0 0 91.66667%;
     max-width: 91.66667%;
   }
-  .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .footer__section__article__div__div, .sectionM__article__div__div, .sectionB__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta {
+  .col-sm-12, .header__nav__div, .header__nav__button, .header__nav__text, .header__nav__redes, .footer__section__article, .footer__section__article__div__div, .sectionM__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta {
     flex: 0 0 100%;
     max-width: 100%;
   }
@@ -10888,7 +10888,7 @@ html {
     flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
-  .col-lg-6, .footer__section__article__div__div, .sectionM__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n, .sectionC__article, .sectionC__consulta {
+  .col-lg-6, .footer__section__article__div__div, .sectionM__article__div__div, .sectionN__article__div, .sectionN__article__div-texto-n {
     flex: 0 0 50%;
     max-width: 50%;
   }
@@ -10912,7 +10912,7 @@ html {
     flex: 0 0 91.66667%;
     max-width: 91.66667%;
   }
-  .col-lg-12 {
+  .col-lg-12, .sectionC__article, .sectionC__consulta {
     flex: 0 0 100%;
     max-width: 100%;
   }
@@ -11055,7 +11055,7 @@ html {
     flex: 0 0 41.66667%;
     max-width: 41.66667%;
   }
-  .col-xl-6 {
+  .col-xl-6, .sectionC__article, .sectionC__consulta {
     flex: 0 0 50%;
     max-width: 50%;
   }
@@ -13811,23 +13811,25 @@ html {
 
 .footer__section__article__texto__p {
   display: block;
+  hyphens: auto;
   margin-bottom: 5rem;
   height: 100%;
   font-size: 1.8rem;
   line-height: 4.5rem;
   text-align: justify;
-  padding: 4rem;
+  letter-spacing: 0.025em;
+  padding: 8rem 4rem 8rem 4rem;
   border: solid black 0.5rem;
 }
 
 .footer__section__article__texto__ol {
-  display: inline-block;
+  display: block;
   margin-bottom: 5rem;
   height: 100%;
   font-size: 1.8rem;
   line-height: 4.5rem;
   text-align: justify;
-  padding: 4rem;
+  padding: 8rem 4rem 8rem 4rem;
   border: solid black 0.5rem;
 }
 
@@ -14261,6 +14263,49 @@ html {
   }
 }
 
+@media (max-width: 1200px) {
+  .footer__section__article__texto__p {
+    font-size: 1.5rem;
+    line-height: 3rem;
+    padding: 3.5rem 2rem 3.5rem 2rem;
+  }
+  .footer__section__article__texto__ol {
+    font-size: 1.5rem;
+    line-height: 3rem;
+    padding: 5rem 2rem 5rem 3rem;
+  }
+}
+
+@media (max-width: 769px) {
+  .footer__section__article__texto__p {
+    padding: 4rem;
+    margin-bottom: 0;
+  }
+  .footer__section__article__texto__ol {
+    padding: 4rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer__section__article__div__p {
+    margin-bottom: 0;
+  }
+  .footer__section__article__h2 {
+    margin-top: 5rem;
+  }
+  .footer__section__article__texto__p {
+    font-size: 1.2rem;
+    line-height: 4rem;
+    margin-bottom: 0;
+    padding: 4rem;
+  }
+  .footer__section__article__texto__ol {
+    font-size: 1.2rem;
+    line-height: 4rem;
+    padding: 4rem;
+  }
+}
+
 @media (max-width: 992px) {
   .index {
     margin-top: 5rem;
@@ -14343,12 +14388,21 @@ html {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   .sectionC__article {
-    padding: 5rem 0 0 0;
+    padding: 19rem 0 0 0;
   }
   .sectionC__consulta {
-    padding: 5rem 0 0 0;
+    padding: 4rem 0 4rem 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .sectionC__article {
+    padding: 4rem 0 0 0;
+  }
+  .sectionC__consulta {
+    padding: 4rem 0 4rem 0;
   }
 }
 
