--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -190,18 +190,44 @@
 //--------------------------------------------------
                 //SECTOR TEXTO
 //--------------------------------------------------
+@media (max-width: 1200px) {
+    .footer__section__article__texto__p {
+        font-size: 1.5rem;
+        line-height: 3rem;
+        padding: 3.5rem 2rem 3.5rem 2rem ;
+    }
+    .footer__section__article__texto__ol {
+        font-size: 1.5rem;
+        line-height: 3rem;
+        padding: 5rem 2rem 5rem 3rem ;
+    } 
+}
 
-@media (min-width: 1200px) {
-    // .footer__section__article__texto__p {
-    // margin: 0 auto;
-    // height: $size-heigth;
-    // font-size: 1.2rem;
-    // line-height: 3rem;}
-    // .footer__section__article__texto__ol {
-    // margin: 0 auto;
-    // height: $size-heigth;
-    // font-size: 1.2rem;
-    // line-height: 3rem; } 
+@media(max-width: 769px){
+    .footer__section__article__texto__p {
+        padding: 4rem;
+        margin-bottom: 0;}
+    .footer__section__article__texto__ol{
+        padding: 4rem;
+    }   
+}
+
+@media (max-width: 576px) {
+    .footer__section__article__div__p{
+        margin-bottom:0;
+    }
+    .footer__section__article__h2{
+        margin-top:5rem;
+    }
+    .footer__section__article__texto__p {
+    font-size: 1.2rem;
+    line-height: 4rem;
+    margin-bottom: 0;
+    padding: 4rem;}
+    .footer__section__article__texto__ol {
+    font-size: 1.2rem;
+    line-height: 4rem;
+    padding: 4rem;} 
 }
 
 //--------------------------------------------------
@@ -384,13 +410,24 @@
 //--------------------------------------------------
 //--------------------------------------------------
 
+@media (max-width: 1200px) {
+    .sectionC{
+        &__article{
+            padding: 19rem 0 0 0;
+        }
+        &__consulta{
+            padding: 4rem 0 4rem 0;
+        }
+    }
+}
+
 @media (max-width: 768px) {
     .sectionC{
         &__article{
-            padding: 5rem 0 0 0;
+            padding: 4rem 0 0 0;
         }
         &__consulta{
-            padding: 5rem 0 0 0;
+            padding: 4rem 0 4rem 0;
         }
     }
 }
