--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -15,6 +15,7 @@
         &__div{
             &__a{
                 &__img{
+                    padding-left: 2rem;
                     width: 15rem;
                 } 
             }
