--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -8,14 +8,14 @@
 .sectionN{
     &__article{
         &__div{
-            margin: 15rem 0 3rem 0;
+            margin: 18rem 0rem 5rem 0rem;
             img{
                 width:$size-width;
             }
         }
 
         &__div-texto-n{
-            margin: 15rem 0 3rem 0;
+            margin: 18rem 0rem 5rem 0rem;
             &__h1{
                 text-align: center;
             }
