--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -16,7 +16,7 @@
         background-attachment: contain;
         height:100vh;
         width: 100vw;
-        margin: 18rem 0rem 0rem 0rem;
+        margin-top: 13rem;
         &__video{
             height:90%;
             width: auto;
