--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -4,6 +4,7 @@
 //--------------------------------------------------
 //--------------------------------------------------
 
+
 //--------------------------------------------------
     //SECTOR LOGO
 //--------------------------------------------------
@@ -301,9 +302,9 @@
                 //TAMAÑO DE TITULO 
 //--------------------------------------------------
 
-    
     .sectionM{
         &__article2{
+            margin-top: 3rem;
             padding-top: 3rem;
             &__title{
                 &__h2{
@@ -313,6 +314,7 @@
         }
 
         &__article{
+            z-index: -1;
             padding-top: 2rem;
             &__title{
                 &__h2{
@@ -343,6 +345,14 @@
     }
 }
 
+@media (max-width: 576px) {
+    .sectionM{
+        &__article2{
+            margin-top: 2rem;
+        }
+    }
+}
+
 //--------------------------------------------------
 //--------------------------------------------------
                 //BEBIDAS
@@ -353,11 +363,10 @@
 
 //--------------------------------------------------
                 //TAMAÑO DE TITULO 
-//--------------------------------------------------
-    
-        
+//--------------------------------------------------   
         .sectionB{
             &__article2{
+                margin-top: 3rem;
                 padding-top: 3rem;
                 &__title{
                     &__h2{
@@ -391,6 +400,14 @@
         }
     }
 
+@media (max-width: 576px) {
+    .sectionB{
+        &__article2{
+            margin-top: 2rem;
+        }
+    }
+}
+    
 //--------------------------------------------------
 //--------------------------------------------------
                 //NOSOTROS
