Se arreglo el video de tamaño XS para que no se corra el nav para el costado, esto era por el tamaño del video

--- a/css/main.css
+++ b/css/main.css
@@ -14319,17 +14319,19 @@ html {
 
 @media (max-width: 992px) {
   .index {
-    margin-top: 5rem;
+    margin-top: 4rem;
+    height: 100vh;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 763px) {
   .index {
-    margin-top: 5rem;
+    height: 73rem;
+    margin: 0;
     background-image: none;
   }
   .index__video {
-    height: 100vh;
+    width: 100vw;
   }
 }
 
